--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "biome:lint": "bunx biome check --write"
   },
   "dependencies": {
+    "@elysiajs/openapi": "^1.4.11",
     "elysia": "latest",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
@@ -14,7 +15,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
-    "bun-types": "latest"
+    "bun-types": "^1.2.22"
   },
   "module": "src/index.js"
 }
